2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* autogen.sh: Removed -Wall since libtool & automake
	macros are not up to date with autoconf 2.61 and create
	too much warning noise.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am (AM_CFLAGS): Shuffled upwards in the file.
	(fastjar_SOURCES, grepjar_SOURCES) Removed dostime.c, 
	compress.c, pushback.c, shift.c, jartool.h, zipfile.h, 
	dostime.h, compress.h, pushback.h and shift.h.
	(fastjar_LDADD, grepjar_LDADD) Added libfastjar.la.
	(lib_LTLIBRARIES, libfastjar_la_SOURCES) New primitives.
	(libtool) New target.

	* configure.ac (AC_DISABLE_STATIC, AC_LIBTOOL_WIN32_DLL,
	AC_PROG_LIBTOOL, AC_SUBST(LIBTOOL_DEPS)): Added support
	for native libraries for libfastjar.

	* Makefile.in, aclocal.m4, config.h.in, configure:
	Regenerated.

	* config.guess, config.sub, ltmain.sh: New files,
	generated by autogen.sh.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* TODO: New file.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* compress.c (init_compression, write_data, 
	compress_file, end_compression, init_inflation,
	inflate_file, report_str_error, ez_inflate_str,
	hrd_inflate_str): Use EXIT_FAILURE.

	* jargrep.c (create_regexp, read_string, 
	extract_line, check_crc, fnd_match, main,
	version): Use EXIT_FAILURE and EXIT_SUCCESS.

	* jartool.c (main, make_manifest, add_to_jar,
	add_file_to_jar, extract_jar, list_jar, 
	consume, version, help, add_array_to_jar, 
	get_index_entry): Use EXIT_FAILURE and EXIT_SUCCESS.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* dostime.c: Updated copyright information.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* compress.c, dostime.c, jargrep.c, jartool.c
	(HAVE_CONFIG_H): Added guards for include.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* shift.c, jartool.h, jargrep.c, compress.c:
	Updated copyright information.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* compress.h: Updated copyright information.
